    запись трека
    автостарт трека при прыжке или взлёте на определённой высоте

варнинги при компиляции (согласование типа данных у hton)

====================================================================================
===  version 0.5.3 (xx.xx.2022)
====================================================================================
- страница через настройки - "все видимые спутники"
изменение в отображении жпс
    зафиксировать компас (север всегда сверху)
    вращать компас, если есть аппаратная поддержка
    стрелкой указывать текущее направление движения
    точку указывать вокруг по радиусу
    за радиус принимать 100м (при приближении на меньшее расстояние точку рисовать ближе к центру)
страница "только жпс"
    вместо круга рисовать полукруг
    отображать все точки как на карте
    расстояние - прямо на точке
    радиус полукруга считать за 1 км
    высоту показывать в углу (без режима высотомера и скорости снижения)
    скорость по гориз показывать в другом углу


====================================================================================
===  docs (23.12.2021)
====================================================================================
- скрипт генерации pdf и doc из md
- заголовочный раздел - ссылки на разные документы
- руководство пользователя
- описание аппаратных вариантов, подробное с фото снаружи и разбор изнутри
- текущие возможности, проблемы, перспективы развития
- как, используя аппаратную часть, использовать свой программный код (прошивка программатором)

_________________________________________________________________________________________
=========================================================================================
version 0.5.2 (12.11.2021)
------------------------
- русский язык
- опционально переворачивать высотник на 180 (перевоарчивать дисплей, менять местами кнопки)
- высотомер - опциональное превышение площадки приземления
