@@ -63,4 +63,6 @@
 #define USE4BUTTON          1
 #endif
 
+#define PI 3.1415926535897932384626433832795
+
 #endif // _def_H
