@@ -9,7 +9,7 @@
 
 // Вырианты отображения основного режима
 #define MODE_MAIN_MIN       1
-#define MODE_MAIN_MAX       2
+#define MODE_MAIN_MAX       3
 // не переключать на main-экран (ничего не делать)
 #define MODE_MAIN_NONE      -1
 // Использовать крайний запомненный (не менять экран, но включить main-режим)
@@ -20,8 +20,8 @@
 #define MODE_MAIN_GPSALT    1
 // Экран отображения высоты (большими цифрами)
 #define MODE_MAIN_ALT       2
-// Экран отображения времени
-//#define MODE_MAIN_TIME      4
+// Экран отображения навигации
+#define MODE_MAIN_NAV       3
 
 class ViewMain : public ViewBase {
     public:
@@ -37,6 +37,6 @@ void setViewMain(int8_t mode = MODE_MAIN_LAST, bool save = true);
 //void setViewMainGps();
 void setViewMainGpsAlt();
 void setViewMainAlt();
-//void setViewMainTime();
+void setViewMainNav();
 
 #endif // _view_main_H
