@@ -24,6 +24,10 @@ hw (плата, доработать v.3)
 ===  version 0.5.3 (xx.xx.2022)
 ====================================================================================
 - страница через настройки - "все видимые спутники"
+компас
+-    прямое получение данных по wire
+-    калибровка магнетометра
+-    вычисление угла отрисовки компаса по векторам magnetic и accel
 изменение в отображении жпс
     зафиксировать компас (север всегда сверху)
     вращать компас, если есть аппаратная поддержка
